--- a/privacy-policy.html
+++ b/privacy-policy.html
@@ -21,7 +21,7 @@
     <li>No advertising SDKs</li>
     <li>No third-party SDKs that collect data</li>
   </ul>
-  <p>If you have any questions about this policy, contact: <strong>&lt;your email address&gt;</strong></p>
+  <p>If you have any questions about this policy, contact: <strong> neel.g.roy.games@gmail.com </strong></p>
   <p>This app is intended for all ages and functions fully offline.</p>
 </body>
 </html>
